# devtool-rs

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh.md  ROADMAP.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic-test.yml  ci.yml  crate.yml  homebrew-release.yml  release-simple.yml  release-test.yml  release.yml  test-push.yml  ultra-simple.yml
benches/: command_execution.rs  parallel_execution.rs
completions/: devtool-completions.bash  devtool-completions.fish  devtool-completions.nu  devtool-completions.zsh
docs/: PERFORMANCE.md  QUICK_START.md  WORK_SUMMARY.md
src/: main.rs
src/cli/: mod.rs
src/commands/: homebrew.rs  mise.rs  mod.rs  rustup.rs  upgrade_details.rs
src/i18n/: mod.rs
src/parallel/: mod.rs
src/runner/: mod.rs
src/ui/: colors.rs  icons.rs  mod.rs  progress.rs
src/utils/: mod.rs
