[package]
name = "devtool"
version = "0.3.4"
edition = "2021"
authors = ["jenkinpan <jenkinpan0628@gmail.com>"]
description = "A CLI tool for development in update rustup toolchain, mise maintained tools and homebrew packages."
readme = "README.md"
homepage = "https://github.com/jenkinpan/devtool-rs"
repository = "https://github.com/jenkinpan/devtool-rs"
documentation = "https://docs.rs/devtool"
license = "MIT OR Apache-2.0"
keywords = [
    "cli",
    "rust",
    "homebrew",
    "rustup",
    "mise",
]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dirs = "6.0"
regex = "1.10"
# Using serde for status JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
which = "8.0"
