[package]
name = "devtool"
version = "0.6.1"
edition = "2021"
description = "A CLI tool for development in update rustup toolchain, mise maintained tools and homebrew packages."
documentation = "https://docs.rs/devtool"
readme = "README.md"
homepage = "https://github.com/jenkinpan/devtool-rs"
repository = "https://github.com/jenkinpan/devtool-rs"
license = "Apache-2.0"
keywords = ["cli", "homebrew", "mise", "rust", "rustup"]
categories = ["command-line-utilities", "development-tools"]

[[bench]]
harness = false
name = "command_execution"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
colored = "3.0"
dirs = "6.0"
regex = "1.10"
# Using serde for status JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
which = "8.0"

[dev-dependencies]
criterion = "0.7"
